# llm-agent-project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/models/: base_llm_model.py
client/: coin_client.py
client/service/: financial_news_service.py
docker/: Dockerfile.client_api  Dockerfile.llm_agent  Dockerfile.telegram_bot
docker/postgres/: init.sql
docs/: ml_system_design_doc.md  scaling_strategy.md
scripts/: README.md
scripts/docker/: build.sh  down.sh  up.sh
scripts/setup/: install_dependencies.sh  make_executable.sh
src/agent/: README.md  llm.py  run.py
src/agent/llm/: __init__.py  base_llm.py  dummy_llm.py  json_llm.py  lmstudio_llm.py  xml_llm.py
src/agent/planning/prompts/: code_action_prompt.py  example_prompt.py  json_prompt.py  mock_functions.py  xml_prompt.py
src/benchmark/: benchmark_runner.py  companies_mapping.csv  data.csv  data_loader.py
src/benchmark/docs/: llama34b_benchmark_results.md  qwen25_7b_benchmark_results.md
src/client/: app.py  services.py
src/client/service/: coin_price_service.py  financial_news_service.py  stock_price_service.py
src/common/: interfaces.py  models.py
src/telegram_server/: button_texts.py  command_handlers.py  connectors.py  message_handler.py  telegram_bot.py
telegram_server/: telegram_bot.py
tests/: conftest.py  db_test.py  test_code_action_prompt.py  test_dummy_processor.py  test_lmstudio_llm.py  verify_db.py
tests/agent/llm/: test_json_llm.py
tests/client/: test_tool_handler.py
tests/client/service/: test_coin_price_service.py  test_financial_news_service.py
