[tool.poetry]
name = "llm-agent-project"
version = "0.1.0"
description = ""
authors = ["Konstantin.Grotov <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.34"
setuptools = "^75.1.0"
buildtools = "^1.0.6"
newsapi-python = "^0.2.7"
pandas = "^2.2.3"
pytelegrambotapi = "^4.23.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-telegram-bot = "^20.6"
openai = "^1.3.0"
httpx = "^0.25.1"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.10"
langsmith = "^0.2.10"
psycopg2-binary = "^2.9.10"
tortoise-orm = {extras = ["asyncpg"], version = "^0.23.0"}
rank-bm25 = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
order_by_type = true

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "C0116", # missing-function-docstring
    "C0115", # missing-class-docstring
    "W1401", # for using regex in the code
    "C0103", # For using data-science naming style (X_train, etc.)
]
[tool.pylint.'MASTER']
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
